# libsignal-plugins

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  index.d.ts  index.js  package.json  tsconfig.json
.github/workflows/: CI.yml
bench/: curve.ts  logs.txt  readme.md
libsignal-ref/: crypto.js  curve.d.ts  curve.js  keyhelper.js  session_builder.js
native/: wrapper.h
proto-gen/: Cargo.toml  build.rs
proto-gen/src/: WhisperTextProtocol.proto  groupproto.rs  groups.proto  lib.rs  textsecure.rs
src/: binding.rs  crypto.rs  group_cipher.rs  keyhelper.rs  lib.rs  sender_key_state.rs  utils.rs
src/groups/: SenderMessageKey.rs  ciphertext.rs  group_cipher.rs  keyhelper.rs  message_key.rs  mod.rs  proto.rs  sender_chain_key.rs  sender_key_distribution_message.rs  sender_key_message.rs  sender_key_name.rs  sender_key_record.rs  sender_key_state.rs
src/libsignal/: cipher.rs  constants.rs  mod.rs  session_builder.rs  session_cipher.rs  session_record.rs
