
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "libsignal_plugins"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
curve25519-dalek = { version = "4.1.3", features = ["precomputed-tables", "serde"] }
ed25519-dalek = "2.2.0"
napi = "3.0.0"
napi-derive = "3.0.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

rand = "0.8"
aes = "0.8.4"
ctr = "0.9.2"
sha2 = "0.10.9"
zeroize = "1.8.2"
sodiumoxide = "0.2.7"


[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
