
[package]
authors = ["skidy89"]
edition = "2021"
name = "libsignal_plugins"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
curve25519-dalek = { version = "4.1.3", features = ["precomputed-tables", "serde"] }
ed25519-dalek = "2.2.0"
napi = { version = "3.0.0", features = ["tokio_rt"] }
napi-derive = "3.0.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

rand = "0.8"
aes = "0.8.4"
ctr = "0.9.2"
sha2 = "0.10.9"
zeroize = "1.8.2"
hmac = "0.12.1"
cbc = "0.1"
cipher = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
chrono = "0.4"
proto-gen = { path = "./proto-gen", version = "0.1.0"}
prost = "0.14.1"
tokio = { version = "1", features = ["sync", "time", "rt"] }
lazy_static = "1.4"


[build-dependencies]
napi-build = "2"
cc = "1.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = "symbols"
panic = "abort"
